<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 以下、MainActivityから移動したUI要素 -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/oll_example_1"
        />


    <LinearLayout
        android:id="@+id/rotateButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/rotate_udash"/>
        <Button
            android:id="@+id/rotateLeftButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/rotate_anti" />

        <Button
            android:id="@+id/rotateRightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/rotate_clock" />
        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/rotate_u"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/progressButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rotateButtons"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/correctButton"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginEnd="20dp"
            android:text="@string/correct" />

        <Button
            android:id="@+id/incorrectButton"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_marginStart="20dp"
            android:text="@string/incorrect" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/answerSolution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressButtons"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/hintText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/answer" />
        <TextView
            android:id="@+id/answerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:text=""/>

        </LinearLayout>
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/toggleAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/answerSolution"
        android:thumbTint="@color/toggleThumb"
        android:trackTint="@color/toggleOff"
        android:layout_centerHorizontal="true"
        android:text="@string/toggle_answer"
        android:checked="false"/>
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/focusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:thumbTint="@color/toggleThumb"
        android:trackTint="@color/toggleOff"
        android:layout_below="@id/toggleAnswer"
        android:text="@string/focus_button"
        android:layout_centerHorizontal="true"
        android:checked="false"/>
</RelativeLayout>
