<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal">

    <!-- 余白 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <!-- タイマーの時間を表示するTextView -->
    <TextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        android:textSize="48sp" />

    <!-- 余白 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <!-- タイマーを開始・停止するボタンのレイアウト -->
    <Button
        android:id="@+id/resumeButton"
        android:layout_width="220dp"
        android:layout_height="150dp"
        android:text="@string/timer_resume"
        android:textSize="40sp"/>

    <!-- タイマーをリセットするボタン -->
    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/timer_reset" />



    <!-- 最短記録を表示するTextView -->
    <TextView
        android:id="@+id/shortestRecordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="normal"
        android:textSize="24sp" />

    <!-- 最短記録を設定するボタン -->
    <Button
        android:id="@+id/setRecordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/set_record" />

    <!-- 余白 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>
